ajout de la page sur l'edi

--- a/divers/template/templatepagecours.html
+++ b/divers/template/templatepagecours.html
@@ -214,7 +214,7 @@
                 services).</li>
             </ul>
           </div>
-        </div>
+        </div><!-- fin warning-->
 
         <div class="box notices cstyle note boxcontentnote">
           <div class="box-label boxbglabelnote">
