ajout de la page dessiner turtle +menu changement dans le template

--- a/divers/template/templatepagecours.html
+++ b/divers/template/templatepagecours.html
@@ -224,7 +224,7 @@
             <p class="paddingside2">Le rôle 3 ne peut pas donner une nouvelle instruction au bus, tant que le rôle 5 n’a
               pas reposé son crayon.</p>
           </div>
-        </div>
+        </div><!-- fin box notices-->
 
         <div class="box notices cstyle note boxcontentobservation">
           <div class="box-label boxbglabelobservation">
@@ -234,7 +234,7 @@
             <p class="paddingside2">Le rôle 3 ne peut pas donner une nouvelle instruction au bus, tant que le rôle 5 n’a
               pas reposé son crayon.</p>
           </div>
-        </div>
+        </div><!-- fin observation-->
         <div class=" theme-atom-one-dark shadow-3xl text-sm relative overflow-hidden max-w-full tab-size h-full">
           <pre>
             <code class="langage-python">def fib(n):
@@ -244,6 +244,14 @@
               a, b = b, a+b
               print()
           fib(1000)</code></pre>
+        </div>
+
+<!--Code example-->
+        <div class=" theme-atom-one-dark shadow-3xl text-sm relative overflow-hidden max-w-full tab-size h-full">
+          <pre>
+            <code class="langage-python">
+      def fib(n):
+      </code></pre>
         </div>
         <div class="row content" data-aos="fade-up">
           <div class="col-lg-6">
